🐛 FIX: 仕様変更に伴う修正
