# openapi/openapi.yml
@@ -93,8 +93,8 @@ paths:
           schema:
             type: string
         - in: query
-          name: book_category_id
-          description: 書籍カテゴリーでソート
+          name: book_genre_id
+          description: 書籍ジャンルでソート
           required: false
           schema:
             type: integer
@@ -201,8 +201,8 @@ paths:
           schema:
             type: string
         - in: query
-          name: book_category_id
-          description: 書籍カテゴリーでソート
+          name: book_genre_id
+          description: 書籍ジャンルでソート
           required: false
           schema:
             type: integer
@@ -282,7 +282,7 @@ paths:
                 $ref: '#/components/schemas/Review-create-body'
     delete:
       tags:
-        - 管理者向け機能
+        - 全ユーザー向け機能
       summary: 社員の書籍への口コミを削除
       parameters:
         - in: path
@@ -409,6 +409,12 @@ paths:
           required: false
           schema:
             type: string
+        - in: query
+          name: position_id
+          description: userの職種でソート
+          required: false
+          schema:
+            type: string
       responses:
         '200':
           description: Book-requests are fetched
@@ -433,6 +439,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Purchase-request-body'
+
+  /api/book-purchase-requests/confirm:
+    post:
+      tags:
+        - 管理者向け機能
+      summary: 書籍の購入依頼を一括購入する
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Confirm-purchase-request'
+      responses:
+        '200':
+          description: Purchase requests confirmed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Confirm-purchase-request'
 
   /api/my-page:
     get:
@@ -892,15 +917,11 @@ components:
     Review-create-body:
       type: object
       required:
-        - userId
         - bookId
         - reviewRate
         - reviewTitle
         - reviewContent
       properties:
-        userId:
-          type: integer
-          example: 1
         bookId:
           type: integer
           example: 1
@@ -910,7 +931,7 @@ components:
         reviewTitle:
           type: string
           example: とても勉強になりました！
-        review_cotent:
+        reviewContent:
           type: string
           example: 学んだこと：ーーー / おすすめしたい人：〜〜〜
 
@@ -1055,6 +1076,17 @@ components:
           type: string
           example: '2024-10-12'
           format: date
+
+    Confirm-purchase-request:
+      type: object
+      required:
+        - request_ids
+      properties:
+        request_ids:
+          type: array
+          items:
+            type: integer
+            example: 1, 3, 5
 
     Mypage:
       type: object
